# sandsimulator

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: defines.hpp  main.cpp
